<resources>
    <string name="app_name">My Application</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Re-enter Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create new account</string>
    <string name="hint_name">Name</string>
    <string name="btn_Sign_up">Sign Up</string>
    <string name="hint_dob">Date of birth</string>
    <string name="validate_email">Invalid email</string>
    <string name="validate_password_length">Password should contain at least 6 characters</string>
    <string name="valid_name">Invalid Name</string>
    <string name="validate_confirm_password">Password does not match</string>
    <string name="validate_dob">Invalid DOB</string>
    <string name="select_photo">Select photo</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="add_post">New post</string>
    <string name="create">Create</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
</resources>
